<resources>
    <string name="app_name">NameApp</string>
    <string name="button1text">List names</string>
    <string name="button2text">Picture gallery</string>
    <string name="button3text">Learning mode</string>
    <string name="learningText">Who is this???</string>
    <string name="name">Write name here…</string>
    <string name="guess">Guess!</string>
    <string name="add">Add a picture and a name</string>

    <string-array name="names">
        <item>Emil</item>
        <item>Jonas</item>
        <item>Trygve</item>
    </string-array>
    <string name="title_activity_create_owner">activity_create_owner</string>
</resources>
