<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="hotboys69.dat153.nameapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hotboys69.dat153.nameapp.MainActivity">


    <TextView
        android:id="@+id/nameView"
        android:layout_width="342dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="200dp"
        android:background="@drawable/buttonshape"
        android:text="@string/button3text"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="200dp"
        android:background="@drawable/buttonshape"
        android:text="@string/button2text"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:width="200dp"
        android:background="@drawable/buttonshape"
        android:text="@string/button1text"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="129dp"
        android:layout_height="119dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gifImageView"
        app:layout_constraintVertical_bias="0.055" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addPersonButton"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/plus"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:layout_width="284dp"
        android:layout_height="251dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="167dp"
            android:layout_height="181dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:visibility="visible"
            app:srcCompat="@drawable/speechbubble"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="428dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="112dp"
            android:layout_height="61dp"
            android:layout_alignEnd="@+id/imageView4"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/imageView4"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="57dp"
            android:text="Click me!"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="367dp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/mario"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:src="@drawable/mario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

